remove duplicate title

--- a/docs/fonctionnement/petites_annonces_musicales.mdx
+++ b/docs/fonctionnement/petites_annonces_musicales.mdx
@@ -1,6 +1,6 @@
 ---
 id: petites_annonces_musicales
-title: "Petites annonces musicales dans l'association en ce moment !"
+title: "🎵 Petites annonces musicales dans l'association en ce moment !"
 ---
 
 <div style={{"width": "100%", "height": "80vh"}}>
