add emoji calendar to title

--- a/docs/fonctionnement/recherche_calendrier.mdx
+++ b/docs/fonctionnement/recherche_calendrier.mdx
@@ -1,6 +1,6 @@
 ---
 id: recherche_calendrier
-title: "Recherche dans notre calendrier"
+title: "📅 Recherche dans notre calendrier"
 ---
 
 <div style={{"width": "100%", "height": "80vh"}}>
